--- a/dev/pug/layout/thpage_layout.pug
+++ b/dev/pug/layout/thpage_layout.pug
@@ -25,7 +25,8 @@ html(lang="ru-RU")
       var currentPage = localStorage.getItem('currentPage');
       setTimeout(function(){
         //- window.location.href = 'index.html#' + curId;
-        window.location.href = currentPage;
+        window.location.href = 'index.html';
+        //- window.location.href = currentPage;
       }, 3000);
 
     //- call auto download file
