--- a/dev/pug/pages/thanks.pug
+++ b/dev/pug/pages/thanks.pug
@@ -4,3 +4,53 @@ block head
   - var title = 'Спасибо за заявку'
   // meta(http-equiv='refresh', content= '3; URL=index.html')
 block content
+  header.header
+    .header__house
+      img(src="img/general/house.png", alt="image")
+    .container
+      .row
+        .col-lg-4
+          .logo
+            .logo__img
+              img(src="img/content/logo.png", alt="logo")
+            .logo__slogan 
+              span Отделка деревянных домов соблюдая традиции зодчества. Делаем с душой на Века!
+        .col-lg-8.top-content
+          .info-group
+            .info-group__item
+              .info__ico
+                +svg('marker')
+              .info__desc Работаем по всей <b>Нижегородской обл.</b>
+            .info-group__item
+              .info__ico
+                +svg('phone')
+              .info__desc Телефон <a href="tel:88314103712">8 (831) 410 37 12</a>
+          a.recall.popup-js.btn.btn--empty.btn--top(href="#recall") Заказать звонок
+
+      .row.row--toffs
+        .col
+          h1.h1 Спасибо за заявку!
+          h3 Мы свяжемся с вами в короткие сроки
+          //- .option
+            .option__item
+              +svg('done')
+              | Готовы приступать на следующий день без предоплаты
+            .option__item
+              +svg('done')
+              | Полный цикл работ с максимальной выгодой
+
+
+      //- .row
+        .col-lg-4
+          .get-price 
+            span Получите прайс-лист на все работы, которые мы выполняем и получите скидку <b>10%</b>
+            img.get-price__img(src="img/general/doc_top.png", alt="image")
+
+
+      //- .row
+        .col-md-6.col-lg-4
+          .top-btn
+            a.btn.btn--wh.popup-js(href="#prays") 
+              +svg("download")
+              | Скачать прайс-лист
+            .police * Мы не передаем Ваши контактные данные третьим лицам
